2023-04-18  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 12

2022-01-25  Franz Holzinger  <franz@ttproducts.de>
    * bugfix issue #19: compatibility with TYPO3 10: Read needed file class.ext_update.php

2022-01-20  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Remove file class.ext_update.php
    * add requirement for the extension addons_em: This is needed for the Extension Manager if the file ext_tables_static+adt.sql has been modified manually by the admin.

2022-01-11  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with PHP 8: Remove the check for a PHP version.

2021-11-30  Wolfgang Baro  <wolfgang.baro@wiminnco.com>
	  * Rename Weißrussland to Belarus

2021-11-30  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 11 issue #18: No other modifications.

2021-07-13  Franz Holzinger  <franz@ttproducts.de>
    * Use the domain jambagecom in the composer.json.

2020-11-24  Franz Holzinger  <franz@ttproducts.de>
    * fix issue #13: Undo part of latest pull request #12 to the former version 10.0 support.

2020-11-18  Sebastian Iffland
    * fix issue #9: Important bugfix to the former version 10.0 support.
    * Simplification of the TCA files.

2020-06-20  Franz Holzinger  <franz@ttproducts.de>
    * fix issue #11: Translate Swiss Kantons

2020-03-12  Franz Holzinger  <franz@ttproducts.de>
    * Rename Reunion to Réunion

2019-11-27  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10 issue #9: Add the file Configuration/Extbase/Persistence/Classes.php.
    * feature #7 and #8: Add Kosovo

2019-04-11  Franz Holzinger  <franz@ttproducts.de>
    * maintencance release to set it to version 6.7.3
    * apply some modifications coming mainly from the latest TER version 6.4.1 by Daniel Minder
    * fix pull request #6: Correct name of Brazilian Portuguese

2019-03-18  Franz Holzinger  <franz@ttproducts.de>